--- a/assets/stylesheets/battlefield.css
+++ b/assets/stylesheets/battlefield.css
@@ -120,12 +120,6 @@ li.normal-nav > a::after {
 
 }
 
-li.normal-nav > a:hover::after {
-
-	width: 100%;
-
-}
-
 li.normal-nav > a:hover {
 
 	color: white !important;
@@ -133,6 +127,16 @@ li.normal-nav > a:hover {
 }
 
 nav.navbar a.active { color: yellow; }
+
+
+/* Remove underlined links on smaller screen sizes. */
+@media screen and (min-width: 992px) {
+	
+	li.normal-nav > a:hover::after {
+		width: 100%;
+	}
+
+}
 
 /* PAGE HEADER */
 
