--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -105,18 +105,6 @@ li.normal-nav > a::after {
 
 }
 
-li.normal-nav > a:hover::after {
-
-	width: 100%;
-
-}
-
-li.normal-nav > a:hover {
-
-	color: white !important;
-
-}
-
 li.normal-nav > a.active-navlink::before {
 
 	content: '';
@@ -125,6 +113,19 @@ li.normal-nav > a.active-navlink::before {
 	height: 2px;
 	width: 100%;
 	background-color: white;
+
+}
+
+li.normal-nav > a:hover {
+	color: white !important;
+}
+
+/* Remove underlined links on smaller screen sizes. */
+@media screen and (min-width: 992px) {
+
+	li.normal-nav > a:hover::after {
+		width: 100%;
+	}
 
 }
 
